[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Abaddon-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Cats" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 154, 90 )
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="UI" type="Control" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D/UI"]

[node name="TextEdit" type="TextEdit" parent="Camera2D/UI/CanvasLayer"]
margin_left = 19.0
margin_top = 7.0
margin_right = 663.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )

[node name="TextEdit2" type="TextEdit" parent="Camera2D/UI/CanvasLayer"]
margin_left = 366.0
margin_top = 184.0
margin_right = 664.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 2 )

[node name="Button" type="Button" parent="Camera2D/UI/CanvasLayer"]
margin_left = 672.0
margin_right = 962.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Generate"

[node name="Button2" type="Button" parent="Camera2D/UI/CanvasLayer"]
margin_left = 463.0
margin_top = 112.0
margin_right = 565.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Merge"

[node name="OptionButton" type="OptionButton" parent="Camera2D/UI/CanvasLayer"]
margin_left = 332.0
margin_top = 126.0
margin_right = 438.0
margin_bottom = 146.0
keep_pressed_outside = true

[node name="OptionButton2" type="OptionButton" parent="Camera2D/UI/CanvasLayer"]
margin_left = 588.0
margin_top = 128.0
margin_right = 694.0
margin_bottom = 148.0
keep_pressed_outside = true

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -10, -10 )
polygon = PoolVector2Array( 10, 10, 10, 190, 317, 190, 317, 9, 4, 10, 4, 3, 323, 3, 324, 196, 2, 197, 4, 2 )

[connection signal="text_changed" from="Camera2D/UI/CanvasLayer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="Camera2D/UI/CanvasLayer/TextEdit2" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Camera2D/UI/CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Camera2D/UI/CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
